<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/setting_title">
    <ListPreference
        android:defaultValue="@string/settings_top_stories_default"
        android:key="@string/settings_top_stories_key"
        android:title="@string/settings_top_stories_label"
        android:entryValues="@array/settings_top_stories_values"
        android:entries="@array/settings_top_stories_labels" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"/>
</PreferenceScreen>