<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:id="@+id/section"
        android:layout_width="@dimen/section_width"
        android:layout_height="@dimen/section_height"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:text="@string/section" />

    <TextView
        android:id="@+id/web_title"
        android:layout_width="@dimen/title_width"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_weight="1"
        android:background="@color/textColorArticleDetails"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_3"
        app:layout_constraintBottom_toTopOf="@+id/section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/date"
        android:layout_width="@dimen/date_width"
        android:layout_height="@dimen/date_height"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/textColorArticleDetails"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/author"
        android:layout_width="@dimen/author_width"
        android:layout_height="@dimen/author_height"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/textColorArticleDetails"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section"
        app:layout_constraintVertical_bias="0.053"
        tools:text="Abbey Doe" />

</android.support.constraint.ConstraintLayout>

